# wxTerminalEmulator

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  EmbeddedCmdPanel.workspace  LICENSE  MainFrame.cpp  MainFrame.h  README.md  SUMMARY.md  SettingsDlg.cpp  SettingsDlg.hpp  TODO.md  app_persistence.cpp  app_persistence.h  layout_persistence.cpp  layout_persistence.h  main.cpp  pty_backend.h  pty_backend_posix.cpp  pty_backend_posix.h  pty_backend_windows.cpp  pty_backend_windows.h  terminal_core.cpp  terminal_core.h  terminal_event.cpp  terminal_event.h  terminal_gl_renderer.cpp  terminal_gl_renderer.h  terminal_logger.cpp  terminal_logger.h  terminal_panel.cpp  terminal_panel.h  terminal_theme.h  terminal_view.cpp  terminal_view.h  wx.rc  wxTerminalUI.cpp  wxTerminalUI.hpp  wxTerminalUI.wxcp  (+2 more)
.agents/summary/: architecture.md  codebase_info.md  components.md  data_models.md  dependencies.md  index.md  interfaces.md  review_notes.md  workflows.md
.github/workflows/: macos.yml  msys2.yml  ubuntu.yml
assets/: icon.icns  make_icns.sh  make_ico.ps1
cmake/: BundleDeps.cmake  FindWxWidgetsMSYS.cmake
libtsm/: CMakeLists.txt  libtsm_config.h.cmake
libtsm/src/tsm/: libtsm.h  libtsm.sym  tsm-render.c  tsm-screen.c  tsm-vte.c
src/glypht/: MainFrame.cpp  MainFrame.h  app_persistence.cpp  layout_persistence.cpp
src/lib/: pty_backend_windows.cpp  terminal_core.cpp  terminal_gl_renderer.cpp  terminal_gl_renderer.h  terminal_theme.h  terminal_view.cpp  terminal_view.h
submodules/: CMakeLists.txt
